centered main content, and added some styling to the page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="#">Gmail</a></li>
         </ul>
     <div id="content">
-        <div class="image">
+        <div id="logo">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
         </div>
 
@@ -24,7 +24,7 @@
             <!-- search bar -->
             <input type="text" name="seach_bar">
             <!-- search button -->
-            <div class="search_buttons">
+            <div id="search_buttons">
               <span>
                 <input type="submit" value="Google Search">
               </span>
