--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <div class="container">
         <ul>
-          <li><button><a href="#">Sign in</a></button></li>
+          <li><a href="https://accounts.google.com/"><input type="submit" value="Sign in"></a></li>
           <li><a href="#"><div class="apps"></div></a></li>
-          <li><a href="#">Images</a><li>
-          <li><a href="#">Gmail</a></li>
+          <li><a href="https://images.google.com/">Images</a><li>
+          <li><a href="https://mail.google.com/">Gmail</a></li>
         </ul>
     <div id="content">
         <div id="logo">
@@ -35,5 +35,15 @@
         </form>
     </div><!-- main_content -->
 </div><!-- container -->
+    <footer>
+        <ul>
+            <li><a href="https://www.google.com/intl/en/ads/?gh=1">Advertising</a></li>
+            <li><a href="https://www.google.com/services/?gh=1#modal_active=none">Business</a></li>
+            <li><a href="https://www.google.com/intl/en/about/">About</a></li>
+            <li><a href="https://www.google.com/intl/en/policies/privacy/?fg=1">Privacy</a></li>
+            <li><a href="https://www.google.com/intl/en/policies/terms/?fg=1">Terms</a></li>
+            <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+        </ul>
+    </footer>
 </body>
-i</html>
+</html>
